[package]
name = "hellorust"
version = "0.1.0"
authors = ["p.e.kolomnikov <p.e.kolomnikov@tinkoff.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { version = "0.8.1" }
specs = "0.16.1"
specs-derive = "0.4.1"
log = "0.4"
